--- a/src/main.css
+++ b/src/main.css
@@ -4,10 +4,13 @@
 	--grid-padding: 5px;
 
 	/* Colors */
-	--cell-clr: #2e42c1;
-	--cell-hover-clr: #fd3f3f;
-	--cell-ship-hit-clr: #ff2020;
-	--grid-gap-clr: #0c102c;
+	--clr-primary: #2e42c1;
+	--clr-primary-light: #7885dd;
+	--clr-primary-dark: #132cd0;
+	--clr-secondary: #fd3f3f;
+	--clr-secondary-light: #ff5858;
+	--clr-secondary-dark: #ff2020;
+	--clr-black: #000000;
 }
 
 *,
@@ -16,29 +19,54 @@
 	box-sizing: border-box;
 }
 
-body {
-	display: flex;
-	justify-content: space-around;
+button {
+	background-color: var(--clr-primary-dark);
+	border: none;
+	border-radius: 5px;
+	color: white;
+	transition: background-color 200ms ease-in;
 }
 
+button:hover {
+	background-color: var(--clr-primary);
+}
+
+html {
+	height: 100%;
+}
+
+body {
+	min-height: 100%;
+	margin: 0;
+	background-color: var(--clr-primary-light);
+	font-family: 'Courier New', Courier, monospace;
+}
+
+.gameContainer {
+	display: flex;
+	justify-content: space-around;
+	padding: 1rem 0.5rem;
+}
+
+/* || Grid layer */
 .grid {
 	display: grid;
 	grid-template-columns: repeat(10, var(--cell-size));
 	grid-template-rows: repeat(10, var(--cell-size));
 	gap: var(--grid-padding);
 	padding: var(--grid-padding);
-	background-color: var(--grid-gap-clr);
+	background-color: var(--clr-black);
 	width: fit-content;
 }
 
 .grid .cell {
-	background-color: var(--cell-clr);
+	background-color: var(--clr-primary);
 	position: relative;
 	transition: all 200ms ease-out;
 }
 
 .grid .cell:hover {
-	background-color: var(--cell-hover-clr);
+	background-color: var(--clr-secondary);
 }
 
 .grid .cell::after {
@@ -58,9 +86,10 @@ body {
 }
 
 .grid .cell.hadShip {
-	background-color: var(--cell-ship-hit-clr);
+	background-color: var(--clr-secondary-dark);
 }
 
+/* || Ship layer */
 .ships {
 	position: relative;
 }
@@ -102,6 +131,74 @@ body {
 	flex-direction: column;
 }
 
+/* || Outer Modal stylings */
+.modalBackdrop {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: #00000097;
+	z-index: 2;
+}
+
+.modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: grid;
+	grid-template-columns: 2rem auto 2rem;
+	grid-template-rows: 2rem auto;
+	min-width: 30%;
+	min-height: 20%;
+	border-radius: 1rem;
+	background-color: var(--clr-primary-light);
+	border: solid 0.5rem var(--clr-primary-dark);
+	padding: 1rem 0.3rem;
+	gap: 0.1rem;
+}
+
+.modalContent {
+	grid-column: 2 / 3;
+	grid-row: 1 / -1;
+}
+
+.modalCloseBtn {
+	grid-column: -2 / -1;
+	display: grid;
+	place-content: center;
+}
+
+.modalCloseBtn:after {
+	content: '\00d7';
+	display: inline-block;
+	font-weight: bolder;
+	font-size: xx-large;
+}
+
+/* || Inner modal stylings */
+.modalContent .header {
+	text-align: center;
+	margin: 0 0 1rem 0;
+	font-size: xx-large;
+	border-bottom: solid 2px var(--clr-black);
+}
+
+.modalContent .body {
+	padding: 0.2rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	gap: 0.5rem;
+}
+
+/* || Utility classes + misc stylings */
 .hide {
 	visibility: hidden;
+}
+
+.switchBtn {
+	font-size: large;
 }
