players can now win - added checkWin() method to players - added displayWin() func - on win, a modal pops up displaying the winner of the game - player can now also play again after the game ends

--- a/src/main.css
+++ b/src/main.css
@@ -86,7 +86,7 @@ body {
 	background-color: black;
 }
 
-.grid .cell.shot:hover {
+.grid .cell.shot:hover:not(.hadShip) {
 	background-color: var(--clr-primary-darker);
 }
 
