--- a/src/main.css
+++ b/src/main.css
@@ -1,17 +1,13 @@
 :root {
-	/* Measurements */
-	--cell-size: 3rem;
-	--grid-padding: 5px;
-
 	/* Colors */
-	--clr-primary: #2e42c1;
-	--clr-primary-light: #7885dd;
-	--clr-primary-dark: #132cd0;
-	--clr-primary-darker: #051684;
-	--clr-secondary: #fd3f3f;
-	--clr-secondary-light: #ff5858;
-	--clr-secondary-dark: #ff2020;
+	--clr-primary: #0c0;
+	--clr-primary-light: #0f0;
+	--clr-primary-dark: #090;
+	--clr-secondary: #c00;
+	--clr-secondary-light: #f00;
+	--clr-secondary-dark: #d00;
 	--clr-black: #000000;
+	--clr-ship-highlight: #fceb00;
 }
 
 *,
@@ -26,6 +22,7 @@ button {
 	border-radius: 5px;
 	color: white;
 	transition: background-color 200ms ease-in;
+	padding: 0.5rem 1rem;
 }
 
 button:hover {
@@ -39,11 +36,22 @@ html {
 body {
 	min-height: 100%;
 	margin: 0;
-	background-color: var(--clr-primary-light);
+	background-color: var(--clr-black);
 	font-family: 'Courier New', Courier, monospace;
+	color: var(--clr-primary);
+	padding: 1rem;
+}
+
+.header {
+	text-align: center;
+	margin: 0 0 1rem 0;
+	font-size: xx-large;
+	border-bottom: solid 2px var(--clr-primary);
 }
 
 .gameContainer {
+	--cell-size: 2.5rem;
+	--grid-padding: 2px;
 	display: flex;
 	justify-content: space-around;
 	padding: 1rem 0.5rem;
@@ -56,8 +64,8 @@ body {
 	grid-template-rows: repeat(10, var(--cell-size));
 	gap: var(--grid-padding);
 	padding: var(--grid-padding);
-	background-color: var(--clr-black);
 	width: fit-content;
+	box-shadow: 0px 0px 1rem var(--clr-primary);
 }
 
 .grid .cell {
@@ -66,7 +74,7 @@ body {
 	transition: all 200ms ease-out;
 }
 
-.grid .cell:hover {
+.grid .cell:hover:not(.shot) {
 	background-color: var(--clr-secondary-light);
 }
 
@@ -86,10 +94,6 @@ body {
 	background-color: black;
 }
 
-.grid .cell.shot:hover:not(.hadShip) {
-	background-color: var(--clr-primary-darker);
-}
-
 .grid .cell.hadShip {
 	background-color: var(--clr-secondary-dark);
 }
@@ -104,11 +108,10 @@ body {
 	position: absolute;
 	display: flex;
 	flex-wrap: wrap;
-	gap: 5px;
-	justify-content: space-evenly;
-	align-items: center;
-	color: #ffffff;
-	border: 1px solid #ffffff;
+	gap: 2px;
+	place-content: center;
+	border: 1px solid var(--clr-ship-highlight);
+	box-shadow: inset 0px 0px 2rem var(--clr-ship-highlight);
 	text-align: center;
 	pointer-events: none;
 	height: var(--cell-size);
@@ -141,8 +144,8 @@ body {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	background-color: #00000097;
 	z-index: 2;
 }
@@ -157,11 +160,16 @@ body {
 	grid-template-rows: 2rem auto;
 	min-width: 30%;
 	min-height: 20%;
-	border-radius: 1rem;
-	background-color: var(--clr-primary-light);
-	border: solid 0.5rem var(--clr-primary-dark);
-	padding: 1rem 0.3rem;
-	gap: 0.1rem;
+	max-height: 90%;
+	max-width: 70%;
+	overflow-y: auto;
+	overflow-x: auto;
+	background-color: var(--clr-black);
+	border: 1px solid var(--clr-primary);
+	box-shadow: 0px 3px 5px -1px var(--clr-primary),
+		0px 5px 8px 0px var(--clr-primary), 0px 1px 14px 0px var(--clr-primary);
+	padding: 1rem 0.5rem;
+	gap: 0.4rem;
 }
 
 .modalContent {
@@ -183,12 +191,6 @@ body {
 }
 
 /* || Inner modal stylings */
-.modalContent .header {
-	text-align: center;
-	margin: 0 0 1rem 0;
-	font-size: xx-large;
-	border-bottom: solid 2px var(--clr-black);
-}
 
 .modalContent .body {
 	padding: 0.2rem;
@@ -216,10 +218,20 @@ body {
 }
 
 .switchBtn {
-	font-size: large;
+	font-size: medium;
 	padding: 0.5rem;
+	margin-bottom: 1rem;
 }
 
 .shipTypeDisplay {
 	font-size: larger;
+}
+
+.placeShipBoard {
+	--cell-size: 2rem;
+	--grid-padding: 3px;
+}
+
+.placeShipBoard .ship {
+	font-size: small;
 }
