--- a/src/main.css
+++ b/src/main.css
@@ -23,6 +23,7 @@ button {
 	color: white;
 	transition: background-color 200ms ease-in;
 	padding: 0.5rem 1rem;
+	width: fit-content;
 }
 
 button:hover {
@@ -168,8 +169,8 @@ body {
 	border: 1px solid var(--clr-primary);
 	box-shadow: 0px 3px 5px -1px var(--clr-primary),
 		0px 5px 8px 0px var(--clr-primary), 0px 1px 14px 0px var(--clr-primary);
-	padding: 1rem 0.5rem;
-	gap: 0.4rem;
+	padding: 0.5rem;
+	gap: 0.5rem;
 }
 
 .modalContent {
@@ -181,13 +182,15 @@ body {
 	grid-column: -2 / -1;
 	display: grid;
 	place-content: center;
+	padding: 0.5rem;
+	aspect-ratio: 1;
 }
 
 .modalCloseBtn:after {
 	content: '\00d7';
 	display: inline-block;
 	font-weight: bolder;
-	font-size: xx-large;
+	font-size: x-large;
 }
 
 /* || Inner modal stylings */
@@ -234,4 +237,18 @@ body {
 
 .placeShipBoard .ship {
 	font-size: small;
+}
+
+.beforeGame {
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	gap: 1rem;
+	max-width: 60ch;
+}
+
+.gameFinish {
+	text-align: center;
 }
